...
        style={styles.poiButton}
        onPress={() => {
          setShowPOIPanel((prev) => !prev);
        }}
      >
        <Text style={styles.poiButtonText}>
          {showPOIPanel ? "Close" : "Nearby"}
        </Text>
      </Pressable>

      {hasCalendarToken && (
        <Pressable
          testID="next-class-floating-button"
...
